# elastic-trace-the-culprit

./: .gitignore  CONTRIBUTING.md  ELASTIC-API-TEST-SUMMARY.md  README.md  UNIT_TESTS_OVERVIEW.md  claude.md  pytest.ini  test-results.md
docs/: ARCHITECTURE.md  BONUS-CHALLENGES.md  CHARACTERS.md  DESIGN.md  ELASTIC-API-TESTING-REPORT.md  ENGINEERING.md  PRD.md  TESTING-FINDINGS.md  WORKSHOP-TEST-GUIDE.md  WORKSHOP-TESTING-SUMMARY.md  workshop-test-flow.md
elastic-assets/agent-builder/: agent.json
elastic-assets/alerts/: latency-threshold.json  slo-burn-rate.json
elastic-assets/cases/: incident-template.json
elastic-assets/dashboards/: workshop-overview.ndjson
elastic-assets/deployment-metadata/: v1.1-bad-changes.json
elastic-assets/ml-jobs/: apm-latency-anomaly.json
elastic-assets/slos/: order-availability.json  order-latency.json
elastic-assets/workflows/: auto-rollback-action.json  webhook-connector.json
infra/: .env.example  .env.instruqt  docker-compose.yml  load_llm_connector.sh  otel-collector-config.yaml
instruqt/: config.yml  track.yml
scripts/: README.md  auto-rollback-monitor.sh  build-images.sh  demo-mode.sh  deploy.sh  generate-baseline.sh  health-check.sh  load-generator.sh  rollback.sh  setup-elastic.sh  setup-instruqt-env.sh  setup-registry.sh  test-elastic-api.sh  workshop-test.sh
services/inventory-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_service.sh
services/inventory-service/src/inventory/: __init__.py  data.py  main.py  models.py
services/order-service/: Dockerfile  Dockerfile.bad  pom.xml
services/payment-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-local.sh
services/payment-service/examples/: test_requests.sh
services/payment-service/src/payment/: __init__.py  main.py  models.py
services/payment-service/tests/: __init__.py  test_payment_service.py
services/rollback-webhook/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/rollback-webhook/src/webhook/: __init__.py  main.py  models.py  rollback.py
services/rollback-webhook/tests/: __init__.py  test_endpoints.py  test_models.py
takeaways/: SRE-QUICK-REFERENCE.md
tests/: QUICKSTART.md  TEST_INVENTORY.md  TEST_SUMMARY.md  requirements.txt  run-tests.sh  run_integration_tests.sh  run_telemetry_tests.sh
tests/e2e/: Makefile  README.md  TEST_COVERAGE.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.sh  test_rollback_webhook.py  test_workshop_scenario.py
tests/integration/: INDEX.md  QUICK_START.md  README.md  TEST_COVERAGE.md  __init__.py  conftest.py  pytest.ini  (+1 more)
tests/unit/: README.md  (+1 more)
(+53 files in other folders)
